packages/imagproc/lib/ImagProc/Ipp/Adapt.hs

-- generated automatically by adapter.hs

{-# LANGUAGE ForeignFunctionInterface #-}
{-# OPTIONS #-}

module ImagProc.Ipp.Adapt where

import Foreign
import Foreign.C.Types
import ImagProc.Ipp.Structs

foreign import ccall "adapt.h ippiAdd_8u_C1RSfsx"
    ippiAdd_8u_C1RSfsx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Int -> IO Int
ippiAdd_8u_C1RSfs pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize scaleFactor = do
    proiSize <- new roiSize
    r <- ippiAdd_8u_C1RSfsx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize scaleFactor
    free proiSize
    return r

foreign import ccall "adapt.h ippiSub_8u_C1RSfsx"
    ippiSub_8u_C1RSfsx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Int -> IO Int
ippiSub_8u_C1RSfs pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize scaleFactor = do
    proiSize <- new roiSize
    r <- ippiSub_8u_C1RSfsx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize scaleFactor
    free proiSize
    return r

foreign import ccall "adapt.h ippiMulC_32f_C1Rx"
    ippiMulC_32f_C1Rx :: Ptr Float -> Int -> Float -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiMulC_32f_C1R pSrc srcStep value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMulC_32f_C1Rx pSrc srcStep value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiAdd_32f_C1Rx"
    ippiAdd_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiAdd_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAdd_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiSub_32f_C1Rx"
    ippiSub_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiSub_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSub_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiMul_32f_C1Rx"
    ippiMul_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiMul_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMul_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiDiv_32f_C1Rx"
    ippiDiv_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiDiv_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiDiv_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiAbs_32f_C1Rx"
    ippiAbs_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiAbs_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAbs_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiSqrt_32f_C1Rx"
    ippiSqrt_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiSqrt_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSqrt_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiMagnitudePack_32f_C1Rx"
    ippiMagnitudePack_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiMagnitudePack_32f_C1R pSrc srcStep pDst dstStep dstRoiSize = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiMagnitudePack_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiFFTInitAlloc_R_32fx"
    ippiFFTInitAlloc_R_32fx :: Ptr () -> Int -> Int -> Int -> CInt -> IO Int
ippiFFTInitAlloc_R_32f pFFTSpec orderX orderY flag hint = do
    r <- ippiFFTInitAlloc_R_32fx pFFTSpec orderX orderY flag hint
    return r

foreign import ccall "adapt.h ippiFFTFree_R_32fx"
    ippiFFTFree_R_32fx :: Ptr () -> IO Int
ippiFFTFree_R_32f pFFTSpec = do
    r <- ippiFFTFree_R_32fx pFFTSpec
    return r

foreign import ccall "adapt.h ippiFFTGetBufSize_R_32fx"
    ippiFFTGetBufSize_R_32fx :: Ptr () -> Ptr CInt -> IO Int
ippiFFTGetBufSize_R_32f pFFTSpec pSize = do
    r <- ippiFFTGetBufSize_R_32fx pFFTSpec pSize
    return r

foreign import ccall "adapt.h ippiFFTFwd_RToPack_32f_C1Rx"
    ippiFFTFwd_RToPack_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr () -> Ptr CUChar -> IO Int
ippiFFTFwd_RToPack_32f_C1R pSrc srcStep pDst dstStep pFFTSpec pBuffer = do
    r <- ippiFFTFwd_RToPack_32f_C1Rx pSrc srcStep pDst dstStep pFFTSpec pBuffer
    return r

foreign import ccall "adapt.h ippiMirror_8u_C1Rx"
    ippiMirror_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiMirror_8u_C1R pSrc srcStep pDst dstStep roiSize flip = do
    proiSize <- new roiSize
    r <- ippiMirror_8u_C1Rx pSrc srcStep pDst dstStep proiSize flip
    free proiSize
    return r

foreign import ccall "adapt.h ippiRemap_8u_C1Rx"
    ippiRemap_8u_C1Rx :: Ptr CUChar -> Ptr IppiSize -> Int -> Ptr IppiRect -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Int -> IO Int
ippiRemap_8u_C1R pSrc srcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep dstRoiSize interpolation = do
    psrcSize <- new srcSize
    psrcROI <- new srcROI
    pdstRoiSize <- new dstRoiSize
    r <- ippiRemap_8u_C1Rx pSrc psrcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep pdstRoiSize interpolation
    free psrcSize
    free psrcROI
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiRemap_8u_C3Rx"
    ippiRemap_8u_C3Rx :: Ptr CUChar -> Ptr IppiSize -> Int -> Ptr IppiRect -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Int -> IO Int
ippiRemap_8u_C3R pSrc srcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep dstRoiSize interpolation = do
    psrcSize <- new srcSize
    psrcROI <- new srcROI
    pdstRoiSize <- new dstRoiSize
    r <- ippiRemap_8u_C3Rx pSrc psrcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep pdstRoiSize interpolation
    free psrcSize
    free psrcROI
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiRemap_32f_C1Rx"
    ippiRemap_32f_C1Rx :: Ptr Float -> Ptr IppiSize -> Int -> Ptr IppiRect -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Int -> IO Int
ippiRemap_32f_C1R pSrc srcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep dstRoiSize interpolation = do
    psrcSize <- new srcSize
    psrcROI <- new srcROI
    pdstRoiSize <- new dstRoiSize
    r <- ippiRemap_32f_C1Rx pSrc psrcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep pdstRoiSize interpolation
    free psrcSize
    free psrcROI
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiSum_8u_C1Rx"
    ippiSum_8u_C1Rx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr Double -> IO Int
ippiSum_8u_C1R pSrc srcStep roiSize pSum = do
    proiSize <- new roiSize
    r <- ippiSum_8u_C1Rx pSrc srcStep proiSize pSum
    free proiSize
    return r

foreign import ccall "adapt.h ippiSum_32f_C1Rx"
    ippiSum_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Double -> CInt -> IO Int
ippiSum_32f_C1R pSrc srcStep roiSize pSum hint = do
    proiSize <- new roiSize
    r <- ippiSum_32f_C1Rx pSrc srcStep proiSize pSum hint
    free proiSize
    return r

foreign import ccall "adapt.h ippiHistogramRange_8u_C1Rx"
    ippiHistogramRange_8u_C1Rx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr Int32 -> Ptr Int32 -> Int -> IO Int
ippiHistogramRange_8u_C1R pSrc srcStep roiSize pHist pLevels nLevels = do
    proiSize <- new roiSize
    r <- ippiHistogramRange_8u_C1Rx pSrc srcStep proiSize pHist pLevels nLevels
    free proiSize
    return r

foreign import ccall "adapt.h ippiFilterMedian_8u_C1Rx"
    ippiFilterMedian_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterMedian_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMedian_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterMax_8u_C1Rx"
    ippiFilterMax_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterMax_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMax_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterMax_32f_C1Rx"
    ippiFilterMax_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterMax_32f_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMax_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterMin_8u_C1Rx"
    ippiFilterMin_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterMin_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMin_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterMin_32f_C1Rx"
    ippiFilterMin_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterMin_32f_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMin_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterBox_8u_C1Rx"
    ippiFilterBox_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterBox_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterBox_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterBox_32f_C1Rx"
    ippiFilterBox_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilterBox_32f_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterBox_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterSobelVert_32f_C1Rx"
    ippiFilterSobelVert_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiFilterSobelVert_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiFilterSobelVert_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r
